--- a/letras.htm
+++ b/letras.htm
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="estilos-int.css">
   </head>
   <body>
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
@@ -23,36 +23,35 @@
     </nav>
     <main class="contenido letras">
       <div id="inicio"></div>
-      <div class="indice-letras"> <a href="#Primera_Komunion">Primera Komunión</a>
-        <a href="#Iran_-_Iraq">Irán – Iraq</a> <a href="#Soldadito_Espanol">Soldadito
-          Español</a> <a href="#Si_fuera_Dios">Si fuera Dios</a> <a href="#Platanos">Plátanos…</a>
-        <a href="#Suena_la_sirena">Suena la sirena</a> <a href="#Mierda_y_sangre">Mierda
-          y sangre</a> <a href="#El_puto_sabor">El puto sabor</a><a href="#En_el_culo">En
-          el culo</a> <a href="#Ulcera">Úlcera</a> <a href="#Tu_trozo_de_libertad">Tu
-          trozo de libertad</a> <a href="#Inseguridad_Social">Inseguridad
-          Social</a> <a href="#Hambre">Hambre</a> <a href="#Ser_alcalde">Ser
-          alcalde…</a> <a href="#Consumir">Consumir</a> <a href="#Que_se_voten_ellos">Que
-          se voten ellos</a> <a href="#Hombre_Salvaje">Hombre Salvaje</a> <a href="#El_mangui">El
-          mangui</a> <a href="#No_puede_ser">No puede ser</a> <a href="#Francisquillo">Francisquillo</a>
-        <a href="#Goodway_Paco">Goodway Paco</a> <a href="#Nada_sabras">Nada
-          sabrás</a> <span style="color: yellow;"></span> <a href="#Ajedrez_mortal">Ajedrez
-          mortal</a><a href="#Nino_Anarquista">Niño Anarquista</a><a href="#Apestados_Unidos">Apestados
-          Unidos</a> <a href="#Jose_Luis">José Luis</a><a href="#El_ozono">El
-          ozono</a>&nbsp; <a href="#El_monstruo">El monstruo</a><a href="#Solo_ordenes">Sólo
-          órdenes</a><a href="#Principe_Azul">Príncipe Azul</a> <a href="#Pide_perdon">Pide
-          perdón</a><a href="#El_Racismo">El Racismo</a> <a href="#Secuestro_legal">Secuestro
-          legal</a><a href="#Apocalipsis_I">Apocalipsis I</a><a href="#Barrios_bajos">Barrios
-          bajos</a> <a href="#Apocalipsis_II">Apocalipsis II</a> <a href="#Malditos_concursos">Malditos
-          concursos</a> <a href="#La_fiesta">La fiesta</a> <a href="#Huelga_de_hambre">Huelga
-          de hambre</a>&nbsp;&nbsp;&nbsp;&nbsp; <a href="#Intro">Intro</a>&nbsp;&nbsp;
-        <a href="#No_puedes_mas">No puedes más</a> <a href="#El_Nani">El Nani</a>
-        <a href="#Queria_el_mundo_cambiar">Queria el mundo cambiar</a> </div>
+      <div class="indice-letras"> <a href="#Ajedrez_mortal">Ajedrez mortal</a><a
+          href="#Apestados_Unidos">Apestados Unidos</a><a href="#Apocalipsis_I">Apocalipsis
+          I</a><a href="#Apocalipsis_II">Apocalipsis II</a><a href="#Barrios_bajos">Barrios
+          bajos</a><a href="#Consumir">Consumir</a><a href="#El_mangui">El
+          mangui</a><a href="#El_monstruo">El monstruo</a><a href="#El_Nani">El
+          Nani</a><a href="#El_puto_sabor">El puto sabor</a><a href="#El_ozono">El
+          ozono</a><a href="#El_Racismo">El Racismo</a><a href="#En_el_culo">En
+          el culo</a><a href="#Francisquillo">Francisquillo</a><a href="#Goodway_Paco">Goodway
+          Paco</a><a href="#Hambre">Hambre</a><a href="#Hombre_Salvaje">Hombre
+          Salvaje</a><a href="#Huelga_de_hambre">Huelga de hambre</a><a href="#Inseguridad_Social">Inseguridad
+          Social</a><a href="#Intro">Intro</a><a href="#Iran_-_Iraq">Irán – Iraq</a><a
+          href="#Jose_Luis">José Luis</a><a href="#La_fiesta">La fiesta</a><a href="#Malditos_concursos">Malditos
+          concursos</a><a href="#Mierda_y_sangre">Mierda y sangre</a><a href="#Nada_sabras">Nada
+          sabrás</a><a href="#Nino_Anarquista">Niño Anarquista</a><a href="#No_puede_ser">No
+          puede ser</a><a href="#No_puedes_mas">No puedes más</a><a href="#Platanos">Plátanos…</a><a
+          href="#Pide_perdon">Pide perdón</a><a href="#Principe_Azul">Príncipe
+          Azul</a><a href="#Primera_Komunion">Primera Komunión</a>&nbsp;<a href="#Que_se_voten_ellos">Que
+          se voten ellos</a> <a href="#Queria_el_mundo_cambiar">Queria el mundo
+          cambiar</a><a href="#Secuestro_legal">Secuestro legal</a><a href="#Ser_alcalde">Ser
+          alcalde…</a><a href="#Si_fuera_Dios">Si fuera Dios</a><a href="#Soldadito_Espanol">Soldadito
+          Español</a>&nbsp;<a href="#Solo_ordenes">Sólo órdenes</a>&nbsp; <a href="#Suena_la_sirena">Suena
+          la sirena</a>&nbsp;&nbsp; <a href="#Tu_trozo_de_libertad">Tu trozo de
+          libertad</a><a href="#Ulcera">Úlcera</a>&nbsp; </div>
       <!-- ====== CANCIONES ====== -->
       <section class="cancion">
         <h2 id="Primera_Komunion">Primera Komunión</h2>
         <p class="credito">Letra y música 1ª&nbsp;K. (De la maqueta “Tour ’89”)</p>
         <!-- REPRODUCTOR --> <br>
-        <audio controls="controls" preload="none"> <source src="audios/01%20-%201a%20Komunion.mp3"
+        <audio controls="controls" preload="none"> <source src="audios/01%20-%201a%20Komunion.mp3"
             type="audio/mpeg"> Tu navegador no soporta audio HTML5. </audio><br>
         <br>
         <p class="letra">Yo tenía 9 años,<br>¡y cómo no!, iba a un colegio de Hermanos.<br>Me enseñaron todos los pecados capitales,<br>pero no me dijeron ninguna de las mayores verdades.<br>&nbsp;&nbsp;&nbsp; Por un sucio sacramento<br>Una iglesia llena de niños,<br>todos vestiditos iguales.<br>Dinero gastado en vano;<br>El viejo sin un duro en los bolsillos.<br>(Abre el bolsillo y cierra la boca)<br>&nbsp;&nbsp;&nbsp; Por un sucio sacramento</p>
@@ -263,9 +262,9 @@
         <audio controls="controls" preload="none" src="audios/10%20-%20Franciskillo.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
- 	<p class="letra">
-        Yo siempre quise ser<br>uno de esos listillos,<br>que a los 20 se hacen de oro,<br>y poco después ¡Viva Cristo!.<br>No se bien como se hace,<br>pero lo intento día a día.<br>Hace falta mucha suerte,<br>y un padrino que te diga:<br>&nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>&nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br>No me ha salido bien la historia,<br>Otra vez me he dado de morros.<br>Voy a comprarme una espada,<br>y un capote pa los toros.<br>&nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>&nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br></p>
-       <p class="volver"><a href="#inicio">Volver arriba</a></p>
+        <p class="letra">
+        Yo siempre quise ser<br>uno de esos listillos,<br>que a los 20 se hacen de oro,<br>y poco después ¡Viva Cristo!.<br>No se bien como se hace,<br>pero lo intento día a día.<br>Hace falta mucha suerte,<br>y un padrino que te diga:<br>&nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>&nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br>No me ha salido bien la historia,<br>Otra vez me he dado de morros.<br>Voy a comprarme una espada,<br>y un capote pa los toros.<br>&nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>&nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.</p>
+        <p class="volver"><a href="#inicio">Volver arriba</a></p>
       </section>
       <section class="cancion">
         <h2 id="Goodway_Paco">Goodway Paco</h2>
@@ -483,7 +482,7 @@
         <h2 id="Intro">Intro</h2>
         <p class="credito">Música: L. Solaz. (Inédita. Grabado en Alcora el 28/4/90)</p>
         <!-- REPRODUCTOR --> <br>
-        <audio controls="controls" preload="none" src="audios/Intro.mp3"> <source
+        <audio controls="controls" preload="none" src="audios/Intro.mp3"> <source
             src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
         <br>
@@ -505,7 +504,7 @@
         <h2 id="El_Nani">El Nani</h2>
         <p class="credito">Adaptación desafortunada. (Inédita. Grabado en Alcora el 28/4/90)</p>
         <!-- REPRODUCTOR --> <br>
-        <audio controls="controls" preload="none" src="audios/El%20nani.mp3"> <source
+        <audio controls="controls" preload="none" src="audios/El%20nani.mp3"> <source
             src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
         <br>
